# static-redirect-page

./: .dockerignore  BUILD.bazel  Dockerfile  LICENSE  MODULE.bazel  README.md  go.mod  main.go  main_test.go
scripts/: build-docker.sh  build-local.sh  push-to-ghcr.sh
