load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "static_redirect_page_lib",
    srcs = ["main.go"],
    importpath = "static-redirect-page",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "static-redirect-page",
    embed = [":static_redirect_page_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "static_redirect_page_test",
    srcs = ["main_test.go"],
    embed = [":static_redirect_page_lib"],
)
